# GitCopilot

./: .gitignore  README.md  agent_schemas.py  git_utils.py  pagent.py  pyproject.toml  review_agent.py
core/: git_utils.py  pagent.py
gitcopilot/: cli.py  runtime.py
